--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,6 @@ baseurl = "/"
     X-XSS-Protection = "1; mode=block"
     X-Robots-Tag = "noindex"
 
-[[redirects]]
-  from = "/*"
-  to = "/docs/src/.vuepress/dist/index.html"
-  status = 200
+[build]
+  command = "yarn docs:build"
+  publish = "docs/.vuepress/dist/"
